Add Alphabet Superset boilerplate and sample for Week A

--- a/hugo.toml
+++ b/hugo.toml
@@ -67,3 +67,7 @@ style = "github-dark"
   name = "Projects"
   weight = 4
   url = "projects/"
+[[menu.main]]
+  name = "Alphabet Superset"
+  weight = 5
+  url = "weeklies/"
